apps/base/nzdev-homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: notes
  name: notes-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: cert-issuer
spec:
  tls:
    - hosts:
        - nzdev.org
      secretName: root-nzdev-org-tls
  rules:
  - host: nzdev.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notes-service
            port:
              number: 80
